--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+  <link rel="stylesheet" href="/loader.css">
   <link rel="stylesheet" href="/site.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -18,16 +19,13 @@
 </head>
 
 <body>
-  <div id="load-screen">
+  <div class="loader-screen" id="load-screen">
     <div class="loader">
-      LOADING...
-      <div class="c1"></div>
-      <div class="c2"></div>
-      <div class="c3">Loading...</div>
-      <div class="c4"></div>
-      <div class="c5"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
-  </div>
+</div>
 
   <nav class="navbar bg-primary" style="--bs-bg-opacity: 0.75">
     <div class="container-fluid">
