--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
             </div>
           </div>
         </div>
-        <div class="container-sm">
+        <div class="container-sm" id="div-superchat" style="display: none;">
+        </div>
+        <div class="container-sm pt-2">
           <div class="table-responsive-sm" id="divChatHistory">
             <table class="table table-sm table-hover table-striped align-middle bg-light" style="font-size:smaller">
               <tbody id="tblChatHistory" style="font-size:smaller"></tbody>
@@ -222,6 +224,19 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="donator-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="donator-modal-title">Doadores</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="donator-modal-body">
           </div>
         </div>
       </div>
