--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script defer src="/utils.js"></script>
   <script defer src="/site.js"></script>
-  <title>Youtube Chat Explorer</title>
+  <title>Youtube Chat Replay</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <div class="container-fluid">
       <span class="navbar-brand fs-3 fw-bold text-white">
         <i class="fa-solid fa-comments"></i>
-        Youtube Chat Explorer
+        Youtube Chat Replay
       </span>
     </div>
   </nav>
