change input default

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <fieldset id="fds-getliveid">
                 <div class="input-group input-group-sm">
                   <input type="text" class="form-control form-control-sm" placeholder="Live ID" id="ttb-liveid"
-                    value="Y3l_rnTEY_k">
+                    value="5-nXB6x4iyE">
                   <button class="btn btn-sm btn-primary" id="btn-getlive">Get</button>
                 </div>
               </fieldset>
