--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           type="button" role="tab" aria-controls="nav-channel" aria-selected="false">Videos
         </button> -->
         <button class="nav-link active" id="nav-chathistory-tab" data-bs-toggle="tab" data-bs-target="#nav-chathistory"
-          type="button" role="tab" aria-controls="nav-chathistory" aria-selected="false">History
+          type="button" role="tab" aria-controls="nav-chathistory" aria-selected="false">Mensagens
         </button>
         <!-- <button class="nav-link" id="nav-livechat-tab" data-bs-toggle="tab" data-bs-target="#nav-livechat" type="button"
           role="tab" aria-controls="nav-livechat" aria-selected="true">Live Chat
@@ -82,7 +82,7 @@
               <fieldset id="fds-getliveid">
                 <div class="input-group input-group-sm">
                   <input type="text" class="form-control form-control-sm" placeholder="Live ID" id="ttb-liveid"
-                    value="5-nXB6x4iyE">
+                    value="https://www.youtube.com/watch?v=ptFLiK_EX3Q">
                   <button class="btn btn-sm btn-primary" id="btn-getlive">Get</button>
                 </div>
               </fieldset>
