--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="dropdown d-grid">
                 <button class="btn btn-secondary btn-sm dropdown-toggle text-start" type="button"
                   data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
-                  Autores
+                  Usuários
                 </button>
                 <ul class="dropdown-menu" id="lstAuthHistory">
 
@@ -125,7 +125,31 @@
             </div>
           </div>
         </div>
-        <div class="container-sm" id="div-superchat" style="display: none;">
+        <div class="container-sm" id="div-videoinfo" style="display: none;">
+          <div class="row bg-light mx-1 rounded-top">
+            <div class="text-center text-bold" id="div-channeltitle" style="font-weight: 600;">
+            </div>
+          </div>
+          <div class="row bg-light mx-1 rounded-bottom" style="font-size: smaller;">
+            <div class="col-6 text-truncate">
+              <div style="font-weight: 700;">Título</div>
+              <div class="text-truncate" id="div-videotitle"></div>
+            </div>
+            <div class="col-2 text-center">
+              <div style="font-weight: 700;">Duração</div>
+              <div class="text-truncate" id="div-duration"></div>
+            </div>
+            <div class="col-2 text-center">
+              <div style="font-weight: 700;">Data</div>
+              <div class="" id="div-publishdate"></div>
+            </div>
+            <div class="col-2 text-center">
+              <div style="font-weight: 700;">Views</div>
+              <div class=""  id="div-views"></div>
+            </div>
+          </div>
+        </div>
+        <div class="container-sm mt-1" id="div-superchat" style="display: none;">
         </div>
         <div class="container-sm pt-2">
           <div class="table-responsive-sm" id="divChatHistory">
