--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
           </div>
         </div>
         <div class="container-sm" id="div-videoinfo" style="display: none;">
-          <div class="row bg-light mx-1 rounded-top d-xxl-none d-xl-none">
-            <div class="col-4 text-truncate fw-bold" id="div-channeltitlelg">
+          <div class="row bg-light mx-1 rounded-top d-lg-none d-xxl-none d-xl-none">
+            <div class="col-6 text-truncate text-center fw-bold" id="div-channeltitlelg">
             </div>
-            <div class="col-8 text-truncate fw-bold" id="div-videotitlelg">
+            <div class="col-6 text-truncate text-center fw-bold" id="div-videotitlelg">
             </div>
           </div>
           <div class="row bg-light mx-1 rounded-bottom" style="font-size: smaller;">
-            <div class="col text-truncate text-center d-none d-lg-block d-xl-block d-xxl-block">
+            <div class="col-2 text-truncate d-none d-lg-block d-xl-block d-xxl-block">
               <div class="fw-bold">Canal</div>
               <div class="text-truncate" id="div-channeltitle"></div>
             </div>
-            <div class="col-5 text-truncate text-center d-none d-lg-block d-xl-block d-xxl-block">
+            <div class="col-4 text-truncate d-none d-lg-block d-xl-block d-xxl-block">
               <div class="fw-bold">Título</div>
               <div class="text-truncate" id="div-videotitle"></div>
             </div>
