--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
   <script defer src="/utils.js"></script>
   <script defer src="/site.js"></script>
   <title>Youtube Chat Replay</title>
@@ -96,7 +97,7 @@
               </div>
               <select class="form-select form-select-sm" id="ddlLivesChatHistory" style="display: none;"></select> -->
             </div>
-            <div class="col-5">
+            <div class="col-4">
               <div class="dropdown d-grid">
                 <button class="btn btn-secondary btn-sm dropdown-toggle text-start" type="button"
                   data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
@@ -111,6 +112,11 @@
             <div class="col-1 d-grid">
               <button class="btn btn-secondary btn-sm " type="button" id="btnCaptureTable">
                 <i class="fa-solid fa-file-arrow-down text-white"></i>
+              </button>
+            </div>
+            <div class="col-1 d-grid">
+              <button class="btn btn-secondary btn-sm " type="button" id="btnCaptureTableXLS">
+                <i class="fa-solid fa-file-excel text-white"></i>
               </button>
             </div>
             <div class="col-1 d-grid">
@@ -167,7 +173,7 @@
         </div>
         <div class="container-sm pt-2">
           <div class="table-responsive-sm" id="divChatHistory">
-            <table class="table table-sm table-hover table-striped align-middle bg-light" style="font-size:smaller">
+            <table class="table table-sm table-hover table-striped align-middle bg-light" id="tblHistory" style="font-size:smaller">
               <tbody id="tblChatHistory" style="font-size:smaller"></tbody>
             </table>
           </div>
