--- a/index.html
+++ b/index.html
@@ -148,23 +148,23 @@
               <div class="text-truncate" id="div-videotitle"></div>
             </div>
             <div class="col text-center">
-              <div class=" fw-bold" >Duração</div>
+              <div class=" fw-bold">Duração</div>
               <div class="text-truncate" id="div-duration"></div>
             </div>
             <div class="col text-center">
-              <div class=" fw-bold" >Data</div>
+              <div class=" fw-bold">Data</div>
               <div id="div-publishdate"></div>
             </div>
             <div class="col text-center">
-              <div class=" fw-bold" >Views</div>
+              <div class=" fw-bold">Views</div>
               <div id="div-views"></div>
             </div>
             <div class="col text-center">
-              <div class=" fw-bold" >Mensagens</div>
+              <div class=" fw-bold">Mensagens</div>
               <div id="div-msgcount"></div>
             </div>
             <div class="col text-center">
-              <div class=" fw-bold" >Usuários</div>
+              <div class=" fw-bold">Usuários</div>
               <div id="div-authorcount"></div>
             </div>
           </div>
@@ -173,7 +173,8 @@
         </div>
         <div class="container-sm pt-2">
           <div class="table-responsive-sm" id="divChatHistory">
-            <table class="table table-sm table-hover table-striped align-middle bg-light" id="tblHistory" style="font-size:smaller">
+            <table class="table table-sm table-hover table-striped align-middle bg-light" id="tblHistory"
+              style="font-size:smaller; display: none;">
               <tbody id="tblChatHistory" style="font-size:smaller"></tbody>
             </table>
           </div>
