--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="container-sm pt-2">
           <div class="table-responsive-sm" id="divChatHistory">
             <table class="table table-sm table-hover table-striped align-middle bg-light" id="tblHistory"
-              style="font-size:smaller; display: none;">
+              style="font-size:smaller;">
               <tbody id="tblChatHistory" style="font-size:smaller"></tbody>
             </table>
           </div>
